Prevent long words (such as URLs) spilling out of comments at small screen widths

--- a/css/default.css
+++ b/css/default.css
@@ -1201,6 +1201,7 @@ input[type="submit"].disabled,
   border-radius: .35714285714286em;
   padding: 1em 1em 1px;
   background: #f7f7f7;
+  word-wrap: break-word;
 }
 
 .comments h4 .is-author {
